objects/PD_Roll_Off_Box__c/PD_Roll_Off_Box__c.object-meta.xml
<CustomObject>
    <label>PD Roll Off Box</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PD Roll Off Boxes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>