objects/PD_Roll_Off_Box__c/fields/Box_Imported__c.field-meta.xml
<CustomField>
    <fullName>Box_Imported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Box Imported</label>
    <type>Checkbox</type>
</CustomField>