objects/PD_Roll_Off_Box__c/fields/Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Confirmed__c</fullName>
    <label>Confirmed</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>