objects/PD_Roll_Off_Box__c/fields/Division_Number__c.field-meta.xml
<CustomField>
    <fullName>Division_Number__c</fullName>
    <label>Division Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>