objects/PD_Roll_Off_Box__c/fields/Equipment_type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_type__c</fullName>
    <label>Equipment type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>