objects/PD_Roll_Off_Box__c/fields/NAV_Resource_ID__c.field-meta.xml
<CustomField>
    <fullName>NAV_Resource_ID__c</fullName>
    <label>NAV Resource ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>