objects/PD_Roll_Off_Box__c/fields/Resource_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type_ID__c</fullName>
    <label>Resource Type ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>