objects/PD_Roll_Off_Box__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <label>Serial Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>