objects/PD_Roll_Off_Box__c/fields/Service_Center_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Center_ID__c</fullName>
    <label>Service Center ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>