objects/PD_Roll_Off_Box__c/fields/Status_Comments__c.field-meta.xml
<CustomField>
    <fullName>Status_Comments__c</fullName>
    <label>Status/ Comments</label>
    <length>100</length>
    <type>Text</type>
</CustomField>