objects/PD_Roll_Off_Box__c/fields/SW_Decal__c.field-meta.xml
<CustomField>
    <fullName>SW_Decal__c</fullName>
    <label>SW Decal #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>