objects/PD_Roll_Off_Box__c/fields/Update_Target__c.field-meta.xml
<CustomField>
    <fullName>Update_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Target</label>
    <type>Checkbox</type>
</CustomField>